--- a/notebooks/readability.ipynb
+++ b/notebooks/readability.ipynb
@@ -120,7 +120,8 @@
     "#CREATE OUTPUT csv file of info\n",
     "#dir name is test\n",
     "\n",
-    "text('test').read_files()"
+    "t = text('test')",
+    "t.read_files()"
    ]
   },
   {
