--- a/notebooks/readability.ipynb
+++ b/notebooks/readability.ipynb
@@ -16,7 +16,7 @@
     "import pdfplumber\n",
     "\n",
     "class text():\n",
-    "    '''The method that extracts info about .pdf (editable plus scanned) files in a dir/folder.'''\n",
+    "    '''The method that extracts info about .pdf (editable+scanned) files in a dir/folder.'''\n",
     "    \n",
     "    def __init__(self, path):\n",
     "        self.type = ['pdf']\n",
@@ -56,7 +56,7 @@
     "        \n",
     "        if self.package == 'PYPDF2' and self.Table == False:\n",
     "            \n",
-    "            files_reader =[]\n",
+    "            files_reader = []\n",
     "            error_files = []\n",
     "            \n",
     "            for i in pdf_files:\n",
@@ -67,7 +67,7 @@
     "                    error_files.append(str(i))\n",
     "                    pass           \n",
     "                        \n",
-    "        elif self.package =='pdfplumber':\n",
+    "        elif self.package == 'pdfplumber':\n",
     "            \n",
     "            document_text_concat = list()\n",
     "            files_reader = []\n",
@@ -117,8 +117,7 @@
     }
    ],
    "source": [
-    "#CREATE OUTPUT csv file\n",
-    "#dir is test\n",
+    "#CREATE OUTPUT csv file from dir named test\n",
     "\n",
     "t = text('test')\n",
     "t.read_files()\n",
